Project now compiles successfully.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /Users/CJCurrie/Dropbox/Games in Production/Necromancer and NecroEngine/Necromancer/Necromancer/en.lproj
 /Users/CJCurrie/Dropbox/Games in Production/Necromancer and NecroEngine/Necromancer/Necromancer/Necromancer-Info.plist
 /Users/CJCurrie/Dropbox/Games in Production/Necromancer and NecroEngine/Necromancer/Necromancer/Necromancer-Prefix.pch
+/Users/CJCurrie/Dropbox/Games in Production/Necromancer and NecroEngine/.DS_Store
