Various fixes and documentation additions.
Checked and rechecked a few things. Added some functionality for
switching between build targets, switching between debug and release
mode, and logging data to the hard disk drive.

- NEAssert.h: ASSERT/REQUIRE/ENSURE/INVARIANT macros now work perfectly.

- Log.H: Write() now outputs to: console, applicationLog.txt,
clientLog.txt, or serverLog.txt. Option to prepend the date and time.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
+*.DS_Store
+
 /Users/CJCurrie/Dropbox/Games in Production/Necromancer and NecroEngine/Third Party Software/glfw/libglfw.a
+
 /Users/CJCurrie/Dropbox/Games in Production/Necromancer and NecroEngine/Necromancer/Necromancer.xcodeproj
 /Users/CJCurrie/Dropbox/Games in Production/Necromancer and NecroEngine/Necromancer/NecromancerTests
 /Users/CJCurrie/Dropbox/Games in Production/Necromancer and NecroEngine/Necromancer/Necromancer/en.lproj
 /Users/CJCurrie/Dropbox/Games in Production/Necromancer and NecroEngine/Necromancer/Necromancer/Necromancer-Info.plist
 /Users/CJCurrie/Dropbox/Games in Production/Necromancer and NecroEngine/Necromancer/Necromancer/Necromancer-Prefix.pch
-/Users/CJCurrie/Dropbox/Games in Production/Necromancer and NecroEngine/.DS_Store
